# mininet-static-builder

./: Cargo.toml  README.md  mininet-topo.py
configs/: house-links.txt  house-loopbacks.txt  house-paths.txt  house.ntf
src/: dijkstra.rs  main.rs
tree_config/: multicast.txt  tree-links.txt  tree-loopbacks.txt  tree-multicast-paths.txt  tree-paths.txt  tree.ntf
