[package]
name = "mininet-static-builder"
version = "0.1.0"
edition = "2021"
author = "Louis Navarre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.9.0"